--- a/Bootstrap/P1_Layout_and_grid.html
+++ b/Bootstrap/P1_Layout_and_grid.html
@@ -8,10 +8,31 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>P1_Layout_and_grid</title>
+    <link rel="stylesheet" href="P1_Layout_and_grid.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+      <div class="header">
+        this is the header
+      </div>
+      <div class="content">
+        <div class="row">
+          <div class="col-3 sidebar">
+            left sidebar
+          </div>
+          <div class="col-9 main-content">
+            main-content
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        this is the footer
+      </div>
+    </div>
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
