--- a/Bootstrap/P1_Layout_and_grid2.html
+++ b/Bootstrap/P1_Layout_and_grid2.html
@@ -21,6 +21,7 @@
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
+                </div>
             <div class="col-md-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -29,6 +30,7 @@
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
                 </div>
+            </div>
                 <div class="col-md-3">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
@@ -37,6 +39,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                     </div>
+                </div>
             </div>
 
         </div>
