--- a/Bootstrap/IBMLayout2.html
+++ b/Bootstrap/IBMLayout2.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="P1_Layout_and_grid3.css">
-    <title>Practice</title>
+    <title>IBM Home/title>
   </head>
   <body>
     <div class="container-fluid">
