--- a/Bootstrap/IBMLayout2.html
+++ b/Bootstrap/IBMLayout2.html
@@ -8,11 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="P1_Layout_and_grid3.css">
-    <title>IBM Home/title>
+    <title>IBM Home</title>
   </head>
   <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand navbar-dark bg-dark pull-left" style="left:-1%;">
+        <nav class="navbar navbar-expand navbar-dark bg-dark pull-left">
             <div class="col-12 container-fluid">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +47,6 @@
               </div>
             </div>
           </nav>
-    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-3 sidebar">
