--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -50,10 +50,30 @@
       </nav>
     <div class="container-fluid">
         <div class="sidebar col-md-1">
+            <div class="icons container-fluid">
+                <img src="images/home.png" class="icons2">
+                Home
+            </div>
+            <div class="icons container-fluid">
+                <img src="images/home.png" class="icons2">
+                About
+            </div>
+            <div class="icons container-fluid">
+                <img src="images/home.png" class="icons2">
+                Items
+            </div>
+            <div class="icons container-fluid">
+                <img src="images/home.png" class="icons2">
+                Updates
+            </div>
+            <div class="icons container-fluid">
+                <img src="images/home.png" class="icons2">
+                News
+            </div>
 
         </div>
         <div class="main-content col-md-11">
-
+            main content
         </div>
     </div>
 
