--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -50,7 +50,7 @@
       </nav>
     <div class="container-fluid">
         <div class="sidebar col-md-1">
-            <div class="icons container-fluid">
+            <div class="icons">
                 <img src="images/home.png" class="icons2">
                 Home
             </div>
