--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -75,7 +75,7 @@
         </div>
         <div class="main-content col-md-11">
             <div class="row">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -83,7 +83,7 @@
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -91,7 +91,7 @@
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -99,7 +99,7 @@
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
