--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -51,23 +51,23 @@
     <div class="container-fluid">
         <div class="row">
         <div class="sidebar col-md-1">
-            <div class="icons container-fluid">
+            <div class="row">
                 <img src="images/home.png" class="icons2">
                 Home
             </div>
-            <div class="icons container-fluid">
+            <div class="row">
                 <img src="images/home.png" class="icons2">
                 About
             </div>
-            <div class="icons container-fluid">
+            <div class="row">
                 <img src="images/home.png" class="icons2">
                 Items
             </div>
-            <div class="icons container-fluid">
+            <div class="row">
                 <img src="images/home.png" class="icons2">
                 Updates
             </div>
-            <div class="icons container-fluid">
+            <div class="row">
                 <img src="images/home.png" class="icons2">
                 News
             </div>
