--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -51,25 +51,25 @@
     <div class="container-fluid">
         <div class="row">
         <div class="sidebar col-md-1">
-            <div class="row">
+            <div class="row r1">
                 <img src="images/home.png" class="icons2">
-                Home
+                <p>Home</p>
             </div>
-            <div class="row">
+            <div class="row r1">
                 <img src="images/home.png" class="icons2">
-                About
+                <p>About</p>
             </div>
-            <div class="row">
+            <div class="row r1">
                 <img src="images/home.png" class="icons2">
-                Items
+                <p>Missions</p>
             </div>
-            <div class="row">
+            <div class="row r1">
                 <img src="images/home.png" class="icons2">
-                Updates
+                <p>Updates</p>
             </div>
-            <div class="row">
+            <div class="row r1">
                 <img src="images/home.png" class="icons2">
-                News
+                <p>News</p>
             </div>
 
         </div>
