--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -50,7 +50,7 @@
       </nav>
     <div class="container-fluid">
         <div class="row">
-        <div class="sidebar col-md-1">
+        <div class="sidebar col-md-1 col-lg-1 col-sm-1 col-xl-1">
             <div class="row r1">
                 <img src="images/home.png" class="icons2">
                 <p>Home</p>
@@ -75,7 +75,7 @@
         </div>
         <div class="main-content col-md-11">
             <div class="row">
-                <div class="col-xs-12 col-sm6 col-md-4 col-lg-3 m-2">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-2">
                 <div class="card" style="width: 18rem;">
                     <img src="images/home.png" class="card-img-top" alt="...">
                     <div class="card-body">
