--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -73,7 +73,7 @@
             </div>
 
         </div>
-        <div class="main-content col-md-11">
+        <div class="main-content col-md-11 col-sm-11 col-lg-11">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-2">
                 <div class="card" style="width: 18rem;">
