--- a/Bootstrap/CosmosHome.html
+++ b/Bootstrap/CosmosHome.html
@@ -74,16 +74,9 @@
 
         </div>
         <div class="main-content col-md-11 col-sm-11 col-lg-11">
+            <H1>Market Place</H1>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 m-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/home.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div></div>
-                  </div>
+                
                   <div class="col-xs-12 col-sm6 col-md-4 col-lg-3 m-2">
                     <div class="card" style="width: 18rem;">
                         <img src="images/home.png" class="card-img-top" alt="...">
