--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -12,7 +12,22 @@
     <link rel="stylesheet" href="AppleFooter.css">
   </head>
   <body>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-3">
+                Footer # 1
+            </div>
+            <div class="col-3">
+                Footer # 2
+            </div>
+            <div class="col-3">
+                Footer # 3
+            </div>
+            <div class="col-3">
+                Footer # 4
+            </div>    
+        </div>
+    </div>
 
     
     <!-- Optional JavaScript; choose one of the two! -->
