--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -14,16 +14,31 @@
   <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-3">
-                Footer # 1
+            <div class="col-2">
+                <a href="P1_Layout_and_grid.css"><p>Shop and Learn</p></a>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 Footer # 2
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 Footer # 3
             </div>
-            <div class="col-3">
+            <div class="col-2">
+                Footer # 4
+            </div>
+            <div class="col-2">
                 Footer # 4
             </div>    
         </div>
