--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -15,19 +15,21 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-2">
-                <a href="P1_Layout_and_grid.css"><p>Shop and Learn</p></a>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                </ul>
             </div>
             <div class="col-2">
                 Footer # 2
