--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -16,6 +16,23 @@
         <div class="row">
             <div class="col-2">
                 <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Shop and Learn</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Mac</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>iPad</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>iPhone</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Apple Watch</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>TV</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Music</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>iTunes</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Home Pod</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>iPod Touch</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Apple Card</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Accessories</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p>Gift Card</p></a></li>
+                </ul>
+            </div>
+            <div class="col-2">
+                <ul class="list-group list-group-flush">
                     <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
                     <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
                     <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
@@ -32,16 +49,55 @@
                 </ul>
             </div>
             <div class="col-2">
-                Footer # 2
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                </ul>
             </div>
             <div class="col-2">
-                Footer # 3
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                </ul>
             </div>
             <div class="col-2">
-                Footer # 4
-            </div>
-            <div class="col-2">
-                Footer # 4
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                </ul>
             </div>    
         </div>
     </div>
