--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -16,9 +16,9 @@
         <div class="row">
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Shop and Learn</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Mac</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>iPad</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shop and Learn</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Mac</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">iPad</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html"><p>iPhone</p></a></li>
                     <li class="list-group-item"><a href="CosmosHome.html"><p>Apple Watch</p></a></li>
                     <li class="list-group-item"><a href="CosmosHome.html"><p>TV</p></a></li>
